--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -825,11 +825,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ayieku Astiba, did you know that I love you so much?\n"
+     ]
+    }
+   ],
    "source": [
-    "# code goes here "
+    "lil_daughter = \"Ayieku Astiba\"\n",
+    "print(f\"Hello {lil_daughter}, did you know that I love you so much?\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ayieta Astiba, did you know that I love you so much?\n"
+     ]
+    }
+   ],
+   "source": [
+    "elder_daughter = \"Ayieta Astiba\"\n",
+    "print(f\"Hello {elder_daughter}, did you know that I love you so much?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ayieku and ayieta astiba\n",
+      "AYIEKU AND AYIETA ASTIBA\n",
+      "Ayieku And Ayieta Astiba\n"
+     ]
+    }
+   ],
+   "source": [
+    "both_daughters = \"Ayieku and Ayieta Astiba\"\n",
+    "print(both_daughters.lower())\n",
+    "print(both_daughters.upper())\n",
+    "print(both_daughters.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'If you can't fly then run,\n",
+      " if you can't run then walk,\n",
+      " if you can't walk then crawl,\n",
+      " but whatever you do you have to keep moving forward.' \n",
+      " By 'Martin Luther King, Jr.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_quote =\"'If you can't fly then run,\\n if you can't run then walk,\\n if you can't walk then crawl,\\n but whatever you do you have to keep moving forward.'\"\n",
+    "author = \"'Martin Luther King, Jr.'\"  \n",
+    "print(f\"{random_quote} \\n By {author}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataset has:\n",
+      "    * 25 rows.\n",
+      "    * 2 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = 25\n",
+    "columns = 2\n",
+    "print(f\"the dataset has:\\n    * {rows} rows.\\n    * {columns} columns.\")"
    ]
   }
  ],
