--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce9e902e",
+   "id": "9f18e325",
    "metadata": {},
    "source": [
     "# Dictionaries\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "439273e6",
+   "id": "3a571310",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "325b7775",
+   "id": "06b47393",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "acc3491e",
+   "id": "a2c30393",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e0ceed76",
+   "id": "7a91157b",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "342a1515",
+   "id": "8ac029ce",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "54a54866",
+   "id": "cddbe2a6",
    "metadata": {},
    "outputs": [
     {
@@ -145,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "5039499d",
+   "execution_count": 52,
+   "id": "758820bc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Martin had the following Masala and Ugali and Sukuma and Chicken\n"
+      "Martin had the following Caramel tea and Hot Wings for breakfast and Ugali, Sukuma and Chicken for lunch\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "print(\"Martin had the following \" + menu[\"Breakfast\"][\"Beverages\"][\"Tea\"][0] + \" and \" +menu[\"Lunch\"][\"Carbos\"][0] + \" and \" +menu[\"Lunch\"][\"Veges\"][0] + \" and \" +menu[\"Lunch\"][\"Proteins\"][0] )"
+    "print(\"Martin had the following \" + menu[\"Breakfast\"][\"Beverages\"][\"Tea\"][2] + \" tea and \" + menu[\"Breakfast\"][\"Accompaniments\"][\"Wings\"][0] + \" for breakfast and \" +menu[\"Lunch\"][\"Carbos\"][0] + \", \" +menu[\"Lunch\"][\"Veges\"][0] + \" and \" +menu[\"Lunch\"][\"Proteins\"][0] +\" for lunch\")"
    ]
   }
  ],
