--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -1,8 +1,221 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0df994c3",
+   "metadata": {},
+   "source": [
+    "## List\n",
+    "* A collection of items in a particular order.\n",
+    "* Can include strings, floats, intergers and any other datatypes or another list.\n",
+    "* You can add anything in a list, and the items in the list don't have to be related.\n",
+    "* Use Square Brackets (```[]```) to indicate a list and individual items in the list are separated by commas. \n",
+    "* **Syntax** : ```[item_1, item_2, item_3, ....., item_n]```\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
+   "id": "0f13ed97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mango', 'Banana', 'Orange', 'Apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example\n",
+    "fruits = [\"Mango\", \"Banana\", \"Orange\", \"Apple\"]\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e778c884",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Type of datatype\n",
+    "type(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3754a082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[254722123456, 254722000000, 254722999999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example 2\n",
+    "\n",
+    "phone_no = [254722123456, 254722000000, 254722999999]\n",
+    "print(phone_no)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afb9e59",
+   "metadata": {},
+   "source": [
+    "### Accessing Items in a List\n",
+    "\n",
+    "* Lists are ordered collections, i.e you can access individual items in a list by telling py the position of that item in a list\n",
+    "* The position of an item in a list is ref to as **index**\n",
+    "* Syntax to access the item(s) in a list: \n",
+    "* **```list_name[index of item]```**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9881b8be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Banana', 'Oranges']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Using fruit list\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ece1aa22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Access Banana\n",
+    "print(fruits[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5273596b",
+   "metadata": {},
+   "source": [
+    "* **Index** positions start at **0**, not ~~1~~\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f7a1250c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORANGES\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Change Case\n",
+    "\n",
+    "fruits[2].upper()\n",
+    "print(fruits[2].upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0820e0ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Oranges\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using negative indexing\n",
+    "# Starts at -1\n",
+    "\n",
+    "print(fruits[-1])\n",
+    "print(fruits[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d67f0df7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Martin likes Apple, especially the red ones\n",
+      "Martin likes both Bananas and Apples\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Using indiv items in a list\n",
+    "message = f\"Martin likes {fruits[-1]}, especially the red ones\"\n",
+    "message_2 = f\"Martin likes both {fruits[1]}s and {fruits[-1]}s\"\n",
+    "\n",
+    "print(message)\n",
+    "print(message_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b78623d",
+   "metadata": {},
+   "source": [
+    "### Modifying, Adding and Removing Elements in a list\n",
+    "* Lists are dynamic, i.e.u can add, modify or remove items from the list or delete entire list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "a398905a",
    "metadata": {},
    "outputs": [
@@ -10,21 +223,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Supreme', 'High Court']\n"
+      "['Supreme Court', 'High Coat']\n"
      ]
     }
    ],
    "source": [
-    "#modifying elements in a list\n",
-    "courts = [\"Supreme\", \"High Court\"]\n",
+    "# Example List\n",
     "\n",
-    "courts[1] = \"High Court\"\n",
+    "courts = [\"Supreme Court\", \"High Coat\"] # Coat intentionally misspelt\n",
+    "\n",
+    "\n",
     "print(courts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
+   "id": "4e3d647b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Supreme Court', 'High Court']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modifying elements in a list\n",
+    "\n",
+    "courts[1] = \"High Court\" # To rectify the earlier deliberate typo\n",
+    "print(courts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "be752cb1",
    "metadata": {},
    "outputs": [
@@ -32,63 +267,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Supreme', 'High Court', 'Magistrate Court']\n"
+      "['Supreme Court', 'High Court', 'Magistrate Court']\n"
      ]
     }
    ],
    "source": [
-    "#adding new items to the list\n",
+    "#adding new items to the list - introducing new items to the list\n",
+    "\n",
+    "#1. Adding elements at the end of a list use .append(item)\n",
     "courts.append(\"Magistrate Court\")\n",
     "print(courts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "4b6620b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mango', 'Banana', 'Orange', 'Apple', 'Paw Paw', 'Paw Paw']\n"
+     ]
+    }
+   ],
    "source": [
-    "#example 2\n",
+    "#example 2 of .append\n",
     "fruits.append(\"Paw Paw\")\n",
     "print(fruits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "7c9b48ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Supreme Court', 'Court of Appeal', 'High Court', 'Magistrate Court']\n"
+     ]
+    }
+   ],
    "source": [
-    "#insert an item into a list\n",
+    "#2. Insert an item into a list at a specific position\n",
+    "# Syntax  .insert(index, item)\n",
+    "\n",
     "courts.insert(1, \"Court of Appeal\")\n",
     "print(courts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ec7babba",
+   "execution_count": 59,
+   "id": "8c2c9a70",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fruits' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#remove item from a list\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#1. Using .pop() to remove an item at the end of a list\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m fruits\u001b[38;5;241m.\u001b[39mpop()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(fruits)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#2. Using .pop(index) to remove an item at a particular position\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fruits' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: courts\n"
      ]
     }
    ],
    "source": [
-    "#remove item from a list\n",
-    "#1. Using .pop() to remove an item at the end of a list\n",
+    "# Display items in a list with their respective indexes\n",
+    "# Syntax enumerate()\n",
+    "\n",
+    "for i, court in enumerate(courts):\n",
+    "    print(f\"{i}: courts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "ec7babba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mango', 'Banana', 'Orange', 'Apple', 'Paw Paw', 'Paw Paw']\n",
+      "['Mango', 'Banana', 'Orange', 'Apple', 'Paw Paw']\n",
+      "['Banana', 'Orange', 'Apple', 'Paw Paw']\n",
+      "['Banana', 'Paw Paw']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove item from a list\n",
+    "# 1. Using .pop() to remove an item at the end of a list\n",
+    "\n",
+    "print(fruits)\n",
     "fruits.pop()\n",
     "print(fruits)\n",
+    "\n",
     "#2. Using .pop(index) to remove an item at a particular position\n",
     "fruits.pop(0)\n",
     "print(fruits)\n",
@@ -106,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "b51b77bc",
    "metadata": {},
    "outputs": [
@@ -116,7 +395,7 @@
        "'ORANGES'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "a7f08da0",
    "metadata": {},
    "outputs": [
