--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -237,12 +237,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89c68097",
+   "cell_type": "markdown",
+   "id": "10e51a56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### For Loop\n",
+    "\n",
+    "* Basic syntax \n",
+    "\n",
+    "```\n",
+    "for item in sequence:\n",
+    "    # code to be executed for each item\n",
+    "    # ...\n",
+    "```\n",
+    "\n",
+    "* `for`: Keyword that signals the start of a for loop.\n",
+    "* `item`: Is a variable that represents the current item in the sequence during each iteration of the loop.\n",
+    "* `in` : A keyword used to specify that you are iterating *in* the given sequence.\n",
+    "* `sequence` : Collection of items that you want to iterate over (e.g., list, string, tuple, or range).\n",
+    "* `:` : Signifies the start of the ind\n",
+    "dented code block that will be executed for each iteration of the loop. \n",
+    "\n",
+    "Inside the indented code block, you place the actions or operations that you want to perform on each item in the sequence.The loop will automatically iterate through the entire sequence, executing the code block for each item."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b95faba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kisumu\n",
+      "Kisii\n",
+      "Nyamira\n",
+      "Homa Bay\n",
+      "Migori\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code demo\n",
+    "high_courts = ['Kisumu', 'Kisii','Nyamira','Homa Bay', 'Migori', 'Kitale']\n",
+    "for court in high_courts:\n",
+    "    print(court)\n",
+    "    if (court == 'Migori'):\n",
+    "        break;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "babf1e44",
+   "metadata": {},
+   "source": [
+    "### Sequence Types\n",
+    "\n",
+    "* Ref to data structures that hold a collection of elements, where each element is accessible by an index or key.\n",
+    "* These elements are ordered,.eanng they have a specific position within the sequence\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fb4eefe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Kisumu', 'Kisii', 'Nyamira', 'Homa Bay', 'Migori', 'Kitale']\n",
+      "Homa Bay\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list\n",
+    "print(high_courts)\n",
+    "\n",
+    "# Accessing elements /items in a list\n",
+    "print(high_courts[3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6f4d9103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kisumu\n",
+      "kisii\n",
+      "nyamira\n",
+      "homa bay\n",
+      "migori\n",
+      "kitale\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# looping thru list\n",
+    "for court in high_courts:\n",
+    "    lower_case = court.lower()\n",
+    "    print(lower_case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "065d65dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Kocheli', 'Solo', 'Nyambane', 'Yussuf')\n",
+      "Kocheli\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple  > Similar to list but its imutable, meaning it cannot be changed\n",
+    "# Syntax tuple_name = (item_1, item_2, item_3,......item_n )\n",
+    "\n",
+    "noise_makers = ('Kocheli', 'Solo', 'Nyambane', 'Yussuf')\n",
+    "print(noise_makers)\n",
+    "\n",
+    "# Accessing items in a tuple is same as accessing items in a list\n",
+    "print(noise_makers[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ccf8277",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kocheli\n",
+      "Solo\n",
+      "Nyambane\n",
+      "Yussuf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# looping a tuple\n",
+    "\n",
+    "for notorious in noise_makers:\n",
+    "    print(notorious)"
+   ]
   }
  ],
  "metadata": {
