--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -399,6 +399,483 @@
     "for notorious in noise_makers:\n",
     "    print(notorious)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d1fc4703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n",
+      "u\n",
+      "d\n",
+      "i\n",
+      "c\n",
+      "i\n",
+      "a\n",
+      "r\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate thru a string\n",
+    "\n",
+    "word = 'Judiciary'\n",
+    "for char in word:\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c01da97a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['J', 'u', 'd', 'i', 'c', 'i', 'a', 'r', 'y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty List to store chars\n",
+    "word_chars= []\n",
+    "\n",
+    "for char in word:\n",
+    "    word_chars.append(char)\n",
+    "print(word_chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1959c759",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range . sequence in numbers with def start and end\n",
+    "\n",
+    "#Empty list to store odd numbers \n",
+    "odd_nums = []\n",
+    "for num in range(1, 10):\n",
+    "    if (num % 2 == 1):\n",
+    "        odd_nums.append(num)\n",
+    "    \n",
+    "print(odd_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7e66aa77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Martin, welcome to Judiciary!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet_students(students_name):\n",
+    "    message = f\"Hello {students_name}, welcome to Judiciary!!!\"\n",
+    "    return print(message)\n",
+    "\n",
+    "greet_students('Martin')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043651cf",
+   "metadata": {},
+   "source": [
+    "## Loop Body\n",
+    "* Ref block of code executed repeatedly for each iteration\n",
+    "* Loop is designed to perform repeated tasks automatically and loop body contains the instructions.\n",
+    "\n",
+    "### Important points to consider\n",
+    "1. **Indentation** - Loop body is indented to indicate the part of teh loop body.\n",
+    "\n",
+    "2. **Iteration** - Loop body is executed once for each item in the sequence being iterated.\n",
+    "\n",
+    "3. **Accessing Loop Variable** - Loop var value can be accessed inside the loop body  to perform specific to that value\n",
+    "\n",
+    "4. **Manipulation** - inside the loop body, you can perform various \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "82900133",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square of 1 = 1\n",
+      "The square of 2 = 4\n",
+      "The square of 3 = 9\n",
+      "The square of 4 = 16\n",
+      "The square of 5 = 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example\n",
+    "\n",
+    "for num in range(1, 6):\n",
+    "    square = num ** 2\n",
+    "    print(f\"The square of {num} = {square}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062eb8de",
+   "metadata": {},
+   "source": [
+    "### `range()`\n",
+    "\n",
+    "* Function commonly used esp when working with loops\n",
+    "* Gen a sequence of nums within a specified range, which can be used for various  purposes eg, iterating thru a loop  of certain numbers  or creating a  list of numbers.\n",
+    "* `range()` takes up three arguments:\n",
+    "\n",
+    "1. **start(inclusive, optional)** - The starting value of the sequence. If omitted, the sequence starts at zero by default.\n",
+    "2. **stop(exclusive)** - The ending value of a sequence. The sequence will run upto the value but **NOT** include the value in the sequence. Example: if start=0 and stop = 50, sequence will be all numbers including 0 to 49 but *NOT* 50\n",
+    "3. **step(optional)** - The diff btn consecutive vallues in the sequence. The default value of step is **1**\n",
+    "\n",
+    "* syntax `range(start, stop, step)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a84f9bf",
+   "metadata": {},
+   "source": [
+    "### Basic Range\n",
+    "* Only using stop to gen sequence of nums 0 - 10\n",
+    "* Rem if u dont include start or step, python will auto pick 0 and 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aec0527f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(6):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "231aae96",
+   "metadata": {},
+   "source": [
+    "### Specify Start and Stop\n",
+    "* Gen a sequence where we specify start of a seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8dc51608",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(30, 40):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe95bde6",
+   "metadata": {},
+   "source": [
+    "### Specifying  Start, Stop, Step\n",
+    "* **Step** is the diff btn two consecutive numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d429e77f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(3, 31, 3):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "070e33e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "r\n",
+      "o\n",
+      "f\n",
+      "\n",
+      "Prof\n",
+      "Martin\n",
+      "Lumumba\n",
+      "Stan\n",
+      "Kirui\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "item_1 = student_names[0]\n",
+    "for letters in item_1:\n",
+    "    print(letters)\n",
+    "print()\n",
+    "\n",
+    "for students in student_names:\n",
+    "    print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fe844088",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "r\n",
+      "o\n",
+      "f\n",
+      "\n",
+      "M\n",
+      "a\n",
+      "r\n",
+      "t\n",
+      "i\n",
+      "n\n",
+      "\n",
+      "L\n",
+      "u\n",
+      "m\n",
+      "u\n",
+      "m\n",
+      "b\n",
+      "a\n",
+      "\n",
+      "S\n",
+      "t\n",
+      "a\n",
+      "n\n",
+      "\n",
+      "K\n",
+      "i\n",
+      "r\n",
+      "u\n",
+      "i\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested Loops- loop within a loop\n",
+    "    \n",
+    "\n",
+    "for student in student_names:\n",
+    "    for letter in student:\n",
+    "        print(letter)\n",
+    "    print() # line break after every name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a372167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 5):  \n",
+    "    print('* ' * i)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5f686183",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "# def the number of rows\n",
+    "num_rows = 4\n",
+    "\n",
+    "# outer loop  for rows\n",
+    "for i in range(num_rows):\n",
+    "        # inner loop to print the asterix(*)\n",
+    "        for j in range(i + 1):\n",
+    "            print(\"*\", end=\" \") \n",
+    "        # move next line after each row is printed\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "17a9f4fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Prof, welcome to Judiciary!!!\n",
+      "Hello Martin, welcome to Judiciary!!!\n",
+      "Hello Lumumba, welcome to Judiciary!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_names =[\"Prof\", \"Martin\", \"Lumumba\"]\n",
+    "#loop body with a function\n",
+    "for name in student_names:\n",
+    "    greet_students(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79dc8062",
+   "metadata": {},
+   "source": [
+    "### Assignment\n",
+    "* Print the following\n",
+    "```\n",
+    "      *\n",
+    "    * *\n",
+    "  * * *\n",
+    "* * * *\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c5aec506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "* \n",
+      "* * \n",
+      "* * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "num_rows = 5\n",
+    "asterix = \"*\"\n",
+    "for i in range (num_rows):\n",
+    "    for j in range (i):\n",
+    "        print (asterix, end = \" \")\n",
+    "    print ()"
+   ]
   }
  ],
  "metadata": {
