--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1fc4703",
+   "id": "111b4444",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c01da97a",
+   "id": "4439a3af",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1959c759",
+   "id": "0f6280b7",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7e66aa77",
+   "id": "eea18cb3",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "043651cf",
+   "id": "caee61c1",
    "metadata": {},
    "source": [
     "## Loop Body\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "82900133",
+   "id": "0d6df6e8",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062eb8de",
+   "id": "e6846866",
    "metadata": {},
    "source": [
     "### `range()`\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a84f9bf",
+   "id": "fa3bd189",
    "metadata": {},
    "source": [
     "### Basic Range\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "aec0527f",
+   "id": "5bb280d8",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231aae96",
+   "id": "50a5977f",
    "metadata": {},
    "source": [
     "### Specify Start and Stop\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8dc51608",
+   "id": "1072bd28",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe95bde6",
+   "id": "9235f723",
    "metadata": {},
    "source": [
     "### Specifying  Start, Stop, Step\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d429e77f",
+   "id": "cd5249fa",
    "metadata": {},
    "outputs": [
     {
@@ -674,8 +674,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "a5c4babe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Prof, welcome to Judiciary!!!\n",
+      "Hello Martin, welcome to Judiciary!!!\n",
+      "Hello Lumumba, welcome to Judiciary!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_names =[\"Prof\", \"Martin\", \"Lumumba\"]\n",
+    "#loop body with a function\n",
+    "for name in student_names:\n",
+    "    greet_students(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
-   "id": "070e33e6",
+   "id": "c2095a5d",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fe844088",
+   "id": "e765a907",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a372167d",
+   "id": "144551f6",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5f686183",
+   "id": "bdf86af2",
    "metadata": {},
    "outputs": [
     {
@@ -813,31 +836,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "17a9f4fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Prof, welcome to Judiciary!!!\n",
-      "Hello Martin, welcome to Judiciary!!!\n",
-      "Hello Lumumba, welcome to Judiciary!!!\n"
-     ]
-    }
-   ],
-   "source": [
-    "student_names =[\"Prof\", \"Martin\", \"Lumumba\"]\n",
-    "#loop body with a function\n",
-    "for name in student_names:\n",
-    "    greet_students(name)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "79dc8062",
+   "id": "12da0a2f",
    "metadata": {},
    "source": [
     "### Assignment\n",
@@ -852,29 +852,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "c5aec506",
+   "execution_count": 82,
+   "id": "5debb1d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "* \n",
-      "* * \n",
-      "* * * \n"
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n"
      ]
     }
    ],
    "source": [
-    "num_rows = 5\n",
-    "asterix = \"*\"\n",
-    "for i in range (num_rows):\n",
-    "    for j in range (i):\n",
-    "        print (asterix, end = \" \")\n",
-    "    print ()"
+    "n = 4 \n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    spaces = ' ' * (n - i)\n",
+    "    stars = '*' * i\n",
+    "    print(spaces + stars)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "e38cee05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "    *\n",
+      "    *\n",
+      "    *\n",
+      "   **\n",
+      "   **\n",
+      "   **\n",
+      "   **\n",
+      "  ***\n",
+      "  ***\n",
+      "  ***\n",
+      "  ***\n",
+      " ****\n",
+      " ****\n",
+      " ****\n",
+      " ****\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows= 5 \n",
+    "spaces = \" \"\n",
+    "stars = '*'\n",
+    "for i in range(1, rows):\n",
+    "    for j in range(1, rows):\n",
+    "        print(spaces * (rows - i) + stars * i)\n",
+    "       "
    ]
   }
  ],
