--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "111b4444",
+   "id": "7ee05e96",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4439a3af",
+   "id": "9bf2f66d",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0f6280b7",
+   "id": "42bbea2f",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "eea18cb3",
+   "id": "34053156",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caee61c1",
+   "id": "f4304ed1",
    "metadata": {},
    "source": [
     "## Loop Body\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0d6df6e8",
+   "id": "3d41b399",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6846866",
+   "id": "0d635f4c",
    "metadata": {},
    "source": [
     "### `range()`\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3bd189",
+   "id": "4c8b3d90",
    "metadata": {},
    "source": [
     "### Basic Range\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5bb280d8",
+   "id": "3fc6002b",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a5977f",
+   "id": "326a6a7f",
    "metadata": {},
    "source": [
     "### Specify Start and Stop\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1072bd28",
+   "id": "306b887b",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9235f723",
+   "id": "d9f5738f",
    "metadata": {},
    "source": [
     "### Specifying  Start, Stop, Step\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cd5249fa",
+   "id": "57c7e31e",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a5c4babe",
+   "id": "ba6d5099",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c2095a5d",
+   "id": "67105969",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e765a907",
+   "id": "597d4111",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "144551f6",
+   "id": "c73c011d",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "bdf86af2",
+   "id": "656090cb",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12da0a2f",
+   "id": "46a270dc",
    "metadata": {},
    "source": [
     "### Assignment\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5debb1d3",
+   "id": "36f80cd7",
    "metadata": {},
    "outputs": [
     {
@@ -879,8 +879,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "e38cee05",
+   "execution_count": 127,
+   "id": "c8e8f98f",
    "metadata": {},
    "outputs": [
     {
@@ -888,20 +888,8 @@
      "output_type": "stream",
      "text": [
       "    *\n",
-      "    *\n",
-      "    *\n",
-      "    *\n",
-      "   **\n",
-      "   **\n",
-      "   **\n",
       "   **\n",
       "  ***\n",
-      "  ***\n",
-      "  ***\n",
-      "  ***\n",
-      " ****\n",
-      " ****\n",
-      " ****\n",
       " ****\n"
      ]
     }
@@ -911,7 +899,7 @@
     "spaces = \" \"\n",
     "stars = '*'\n",
     "for i in range(1, rows):\n",
-    "    for j in range(1, rows):\n",
+    "    for j in range(1, rows-3):\n",
     "        print(spaces * (rows - i) + stars * i)\n",
     "       "
    ]
