--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ee05e96",
+   "id": "3690b5c1",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9bf2f66d",
+   "id": "9098cce9",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "42bbea2f",
+   "id": "be24c4ac",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "34053156",
+   "id": "506d45c4",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4304ed1",
+   "id": "50d51178",
    "metadata": {},
    "source": [
     "## Loop Body\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3d41b399",
+   "id": "c078a054",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d635f4c",
+   "id": "0f82428b",
    "metadata": {},
    "source": [
     "### `range()`\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8b3d90",
+   "id": "498d8c1f",
    "metadata": {},
    "source": [
     "### Basic Range\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3fc6002b",
+   "id": "7fd84680",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "326a6a7f",
+   "id": "612648c7",
    "metadata": {},
    "source": [
     "### Specify Start and Stop\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "306b887b",
+   "id": "842d3d9e",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f5738f",
+   "id": "ed4233c1",
    "metadata": {},
    "source": [
     "### Specifying  Start, Stop, Step\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "57c7e31e",
+   "id": "e4a57cfa",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ba6d5099",
+   "id": "5d3f9587",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "67105969",
+   "id": "abe13458",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "597d4111",
+   "id": "c554d778",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c73c011d",
+   "id": "e19a1cde",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "656090cb",
+   "id": "059ecf03",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a270dc",
+   "id": "30b1627a",
    "metadata": {},
    "source": [
     "### Assignment\n",
@@ -852,45 +852,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "36f80cd7",
+   "execution_count": 20,
+   "id": "d6da6d0e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   *\n",
-      "  **\n",
-      " ***\n",
-      "****\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 4 \n",
-    "\n",
-    "for i in range(1, n + 1):\n",
-    "    spaces = ' ' * (n - i)\n",
-    "    stars = '*' * i\n",
-    "    print(spaces + stars)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "id": "c8e8f98f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    *\n",
-      "   **\n",
-      "  ***\n",
-      " ****\n"
+      "        * \n",
+      "      * * \n",
+      "    * * * \n",
+      "  * * * * \n",
+      "* * * * * \n"
      ]
     }
    ],
@@ -898,11 +872,37 @@
     "rows= 5 \n",
     "spaces = \" \"\n",
     "stars = '*'\n",
-    "for i in range(1, rows):\n",
-    "    for j in range(1, rows-3):\n",
-    "        print(spaces * (rows - i) + stars * i)\n",
+    "for i in range(rows):\n",
+    "    for j in range(rows -i -1):\n",
+    "        print(spaces, end=\" \")\n",
+    "    for k in range(i + 1):\n",
+    "        print (stars, end=\" \")\n",
+    "    print()\n",
     "       "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9120fb8",
+   "metadata": {},
+   "source": [
+    "### Rugby Teams \n",
+    "||Team|W|D|L|Pts|\n",
+    "|:--|:-|--:|--:|--:|--:|\n",
+    "|1|Kabras|3|0|0|9|\n",
+    "|2|KCB|1|1|1|2|\n",
+    "|3|Queens|0|1|2|1|\n",
+    "|4|Strathmore|0|2|1|2|\n",
+    "|5|Mean Machine|2|1|0|6|\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbe7283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
