Updated Loops with While Loop

--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "c078a054",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "d6da6d0e",
    "metadata": {},
    "outputs": [
@@ -882,8 +882,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f7aca8be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      * \n",
+      "    * * \n",
+      "  * * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = 4\n",
+    "# looping thru each row\n",
+    "for i in range(0, rows):\n",
+    "    # looping thru columns\n",
+    "    for j in range(rows -i -1):\n",
+    "        print(\" \", end=\" \")\n",
+    "        \n",
+    "    for k in range(0, i+1):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()    "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a9120fb8",
+   "id": "003a62b1",
    "metadata": {},
    "source": [
     "### Rugby Teams \n",
@@ -897,12 +927,364 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cbe7283",
+   "cell_type": "markdown",
+   "id": "2ee7c1ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Break and Continue\n",
+    "* They are **Control Flow** statements\n",
+    "* **Break** - Used to immediately exit a loop when a certain condition is met\n",
+    "* When the prog encounters the ```break``` statement, it terminates the loops and continues to execute the code after the loop. It is often used when a specific condition is satisfied and there is no need to continue with the loop\n",
+    "\n",
+    "* **Continue** Used to skip the remaining code in the current iteration of a loop and moves to the next iteration.\n",
+    "* Useful when one wnats to skip certain steps or conditions within a loop without exiting the loop entirely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4126d8f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example Break 1\n",
+    "for i in range(10):\n",
+    "    if (i == 5):\n",
+    "        break # exit the loop when i becomes 5\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f79adde7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example Break 2\n",
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "    if (i == 5):\n",
+    "        break # exit the loop when i becomes 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "bf4c3ef3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mahamri', 'Mbaazi', 'Tea']\n",
+      "['Toast', 'Uji', 'Muhogo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example Continue 1\n",
+    "# food list\n",
+    "breakfast = [\"Eggs\", \"Mahamri\", \"Mbaazi\", \"Vuchieni\", \"Tea\"]\n",
+    "eugene_list = []\n",
+    "for food in breakfast:\n",
+    "    if (food == \"Eggs\"):\n",
+    "        continue\n",
+    "    elif (food == \"Vuchieni\"):\n",
+    "        continue\n",
+    "    else:\n",
+    "        eugene_list.append(food)\n",
+    "print(eugene_list)\n",
+    "\n",
+    "# example Continue 1(b)\n",
+    "# food list\n",
+    "breakfast = [\"Toast\", \"Uji\", \"Kahawa\", \"Muhogo\", \"Oats\"]\n",
+    "martin_list = []\n",
+    "for food in breakfast:\n",
+    "    if (food == \"Kahawa\") or (food ==\"Oats\"):\n",
+    "        continue\n",
+    "    else:\n",
+    "        martin_list.append(food)\n",
+    "print(martin_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "32d220bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example Continue 2\n",
+    "for i in range(10):\n",
+    "    \n",
+    "    if (i == 5):\n",
+    "        continue # skip the value if i==5 \n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e55fd37a",
+   "metadata": {},
+   "source": [
+    "### While Loops\n",
+    "\n",
+    "* Allows a block of code to be repeated until a certain condition remains `True`\n",
+    "* Basic Syntax \n",
+    "```\n",
+    "while condition:\n",
+    "....# code block\n",
+    "....# to execute\n",
+    "\n",
+    "```\n",
+    "\n",
+    "* It is **Crucial** to make sure that the *condition* eventually becomes `False`; Reason - to prevent having an infinite loop, other wise the prog will run indefinitely until you run out of RAM and the computer crashes\n",
+    "\n",
+    "#### While Loops Key Concepts\n",
+    "\n",
+    "1. **Initialization** - Initialize any var used in loop condition  before you enter the loop.\n",
+    "2. **Update our condition** - Inside the loop, make sure the condition is modified in a way that leads it to eventually becoming `False`. Otherwise you will have an infinite loop.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "193e2d8e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1:  while loop to print 1 - 5\n",
+    "count = 0 # Initialization\n",
+    "while (count <=5): #while loop cond\n",
+    "    print(count)\n",
+    "    count +=1 # updating the condition\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2ab89e10-c504-415e-b77a-6cd7f94df819",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2\n",
+    "fruit = [\"apple\", \"banana\", \"cherry\", \"mango\", \"pawpaw\"]\n",
+    "# rep in displaying values in list \n",
+    "print(fruit[0])\n",
+    "print(fruit[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "983cc9a6-ac1c-4b5c-b3ed-cabb51fcb569",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n",
+      "mango\n",
+      "pawpaw\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3\n",
+    "\n",
+    "index = 0\n",
+    "# print everything\n",
+    "while (index < len(fruit)):\n",
+    "    print(fruit[index])\n",
+    "    index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "770d3189-d5fc-43c4-ba82-0b0d0da52c4f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1 * 9 = 9\n",
+      " 2 * 9 = 18\n",
+      " 3 * 9 = 27\n",
+      " 4 * 9 = 36\n",
+      " 5 * 9 = 45\n",
+      " 6 * 9 = 54\n",
+      " 7 * 9 = 63\n",
+      " 8 * 9 = 72\n",
+      " 9 * 9 = 81\n",
+      " 10 * 9 = 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 4 : Multiplication table of 9\n",
+    "multiplier = 1\n",
+    "\n",
+    "while (multiplier <= 10):\n",
+    "    product = multiplier * 9\n",
+    "    print(f\" {multiplier} * 9 = {product}\")\n",
+    "    \n",
+    "    multiplier += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a901b706-be63-4eef-830b-26eeff5f8c38",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "### Nested while loop\n",
+    "\n",
+    "rows = 5 # initialize outer loop\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "while (i < rows): # Condition for outer loop\n",
+    "    j = 0 # initialize var for inner loop\n",
+    "    while j <= i: # condition for inner loop\n",
+    "        print(\"*\", end=\" \")\n",
+    "        j += 1 # update inner loop cond\n",
+    "    print()\n",
+    "    i += 1 # update outer loop cond\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f82007bf-723b-4239-bf6d-3c67c0506bee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        # \n",
+      "      # # \n",
+      "    # # # \n",
+      "  # # # # \n",
+      "# # # # # \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = 5\n",
+    "i = 0\n",
+    "\n",
+    "while i < rows:\n",
+    "    spaces = rows - i - 1\n",
+    "    while spaces > 0:\n",
+    "        print(\" \", end=\" \")\n",
+    "        spaces -= 1\n",
+    "\n",
+    "    j = 0\n",
+    "    while j <= i:\n",
+    "        print(\"#\", end=\" \")\n",
+    "        j += 1\n",
+    "\n",
+    "    print()\n",
+    "    i += 1\n"
+   ]
   }
  ],
  "metadata": {
